# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter.yml
gendiff/: __init__.py  cli.py  gendiff.py  parse.py
gendiff/formatter/: format.py  json.py  plain.py  stylish.py
gendiff/scripts/: cli.py  gendiff.py
tests/: test_gendiff.py
tests/fixtures/: expected.json  expected_recursion.json  filepath1.yml  filepath2.yml
